Agregandole partials a las vistas + Implementar rutas de las mismas.

--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -7,7 +7,9 @@
     <title>ApiRest | Register</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/1.4.6/tailwind.min.css">
 </head>
+<%- include ('./partials/header.ejs') %>
 <body>
     
 </body>
+<%- include ('./partials/footer.ejs') %>
 </html>
