--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -10,6 +10,33 @@
 <%- include ('./partials/header.ejs') %>
 <body>
     
+    <div class="container mx-auto" >
+
+        <h1 class="text-center text-blue-700 font-semibold text-3xl tracking-wide py-4 px-2">Iniciar sesión</h1>
+
+    <div class="container mx-auto w-1/2  text-center py-20 px-20 shadow-2xl ">
+
+
+            <form action="/login" method="POST">
+                <div class="flex flex-col items-center">
+                  <label for="name" class="text-xl font-semibold mb-4">Nombre de usuario:</label>
+                  <input type="text" name="name" id="name" class="rounded shadow px-2 py-1 bg-white focus:outline-none"/>
+                
+                
+                  <label for="password" class="text-xl font-semibold mt-4 mb-4">Contraseña:</label>
+                  <input type="password" name="password" id="password" class="rounded shadow px-2 py-1 bg-white focus:outline-none block"/>
+                
+                  <input type="submit" value="Iniciar Sesión" class="bg-green-600 text-white rounded shadow py-2 px-8 mt-6 font-bold hover:bg-green-400 rounded-full"/>
+                
+                </div>
+
+              </form>
+
+        
+    </div>
+
+    </div>
+    
 </body>
 <%- include ('./partials/footer.ejs') %>
 </html>
