--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -11,14 +11,16 @@
 <body>
 
 
-
+    
     <div class ="container mx-auto" >
 
         <h1 class="text-2xl font-bold text-left tracking-wide my-30">Mi cuenta</h1>
-        <div class="container mx-auto w-1/2  text-center py-20 px-15 shadow-2xl ">
+
+        <div class="container mx-auto w-1/2  text-center py-20 px-20 shadow-2xl ">
+
             <h3 class="text-center text-blue-700 font-semibold text-xl tracking-wide py-4 px-2"> Registrate a continuación: </h3>
            
-            <form class="px-4 py-3 text-center " method ="POST">
+            <form class="px-4 py-3 text-center " method ="POST" >
                 <label for ="nombre" class="  block mb-2 text-sm font-bold text-gray-700">Introduce tu nombre: </label>
                 <input type = "text" id="nombre" class="w-1/2 px-2 py-1 text-sm leading-tight text-gray-700 border border-gray-400 rounded focus:outline-none focus:border-indigo-500">
 
@@ -31,45 +33,46 @@
                 <label for ="password" class="block mb-2 text-sm font-bold text-gray-700">Introduce contraseña: </label>
                 <input type = "password" id="password" class="w-1/2 px-2 py-1 text-sm leading-tight text-gray-700 border border-gray-400 rounded focus:outline-none focus:border-indigo-500">
 
+                <button class="w-1/2 block justify-center bg-green-600 text-white rounded shadow py-2 px-8 mt-6 font-bold hover:bg-green-400 rounded-full">
+                    Registrarse
+                  </button>
 
                 </form>
+
         </div>
 
 
 
     </div>
 
-    <div class="container mx-auto" > 
+    <div class="container mx-auto" >
 
-        <div class="container mx-auto w-1/2  text-center py-20 px-15 shadow-2xl ">
+        <div class="container mx-auto w-1/2  text-center py-20 px-20 shadow-2xl ">
             <h3 class="text-center text-blue-700 font-semibold text-xl tracking-wide py-4 px-2"> ¡O puedes iniciar sesión!</h3>
-                <form action="/login" method="POST">
-                    <div class="flex flex-col items-center">
+                
+            <div class="flex flex-col items-center">
+                    <form action="/login" method="GET">
+                    
                       <label for="name" class="text-xl font-semibold mb-4">Nombre de usuario:</label>
                       <input type="text" name="name" id="name" class="rounded shadow px-2 py-1 bg-white focus:outline-none"/>
                       <label for="password" class="text-xl font-semibold mt-4 mb-4">Contraseña:</label>
                       <input type="password" name="password" id="password" class="rounded shadow px-2 py-1 bg-white focus:outline-none"/>
-                      <input type="submit" value="Iniciar Sesión" class="bg-blue-500 text-white rounded shadow py-2 px-8 mt-6 font-bold hover:bg-blue-600"/>
-                    </div>
-                  </form>
-
-            
+                     
+                    </form>
+                    <button class="w-1/2 block justify-center bg-green-600 text-white rounded shadow py-2 px-8 mt-6 font-bold hover:bg-green-400 rounded-full">
+                        Iniciar sesión
+                      </button>
+            </div>
         </div>
 
+   </div>
 
-
-
-    </div>
-
-    <div class = "container mx-auto">
-        <p>Algunos de nuestros productos</p>
-       
-    <p>Nombre : AK 47</p>
-    <p>Description : Description</p>
-    <p>Precio : 1300</p>
-    <p>Stock : 5</p>
-
-
+    <div class="container mx-auto w-100 h-20 flex-col items-center">
+        <p class="text-2xl font-bold text-center">Algunos de nuestros productos</p>
+        <p class="text-xl font-bold">Nombre : AK 47</p>
+        <p class="text-base">Description : Description</p>
+        <p class="text-xl font-bold">Precio : 1300</p>
+        <p class="text-xl font-bold">Stock : 5</p>
     </div>
 
 
